RESOLVED FIXED289525
Voice detection should be reenabled in case of GPU process crash
https://bugs.webkit.org/show_bug.cgi?id=289525
Summary Voice detection should be reenabled in case of GPU process crash
youenn fablet
Reported 2025-03-11 06:39:08 PDT
Voice detection should be reenabled in case of GPU process crash
Attachments
Radar WebKit Bug Importer
Comment 1 2025-03-11 06:39:28 PDT
EWS
Comment 2 2025-03-14 08:24:42 PDT
Committed 292159@main (5164f69952f4): <https://commits.webkit.org/292159@main> Reviewed commits have been landed. Closing PR #42251 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.